--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "husky",
+  "name": "@chuyik/husky",
   "version": "4.3.8",
   "description": "Prevents bad commit or push (git hooks, pre-commit/precommit, pre-push/prepush, post-merge/postmerge and all that stuff...)",
   "bin": {
